--- a/groceries.html
+++ b/groceries.html
@@ -8,29 +8,29 @@
 </head>
 <body>
   <h1>Create your own grocery list</h1>
-  <form >
+  <form id="FormId">
     <p>
       Please enter your grocery list here(max of 6 items):
     </p>
-    <label for="item-1" id="item-1">Grocery item 1:</label>
-    <input type="text" value="item-1">
+    <label for="item-1">Grocery item 1:</label>
+    <input type="text" id="item-1">
     <br><br>
-    <label for="item-2" id="item-2">Grocery item 2:</label>
-    <input type="text" value="item-2">
+    <label for="item-2">Grocery item 2:</label>
+    <input type="text" id="item-2">
     <br><br>
-    <label for="item-3" id="item-1">Grocery item 3:</label>
-    <input type="text" value="item-3">
+    <label for="item-3">Grocery item 3:</label>
+    <input type="text" id="item-3">
     <br><br>
-    <label for="item-4" id="item-4">Grocery item 4:</label>
-    <input type="text" value="item-4">
+    <label for="item-4">Grocery item 4:</label>
+    <input type="text" id="item-4">
     <br><br>
-    <label for="item-5" id="item-5">Grocery item 5:</label>
-    <input type="text" value="item-5">
+    <label for="item-5">Grocery item 5:</label>
+    <input type="text" id="item-5">
     <br><br>
-    <label for="item-6" id="item-6">Grocery item 6:</label>
-    <input type="text" value="item-6">
+    <label for="item-6">Grocery item 6:</label>
+    <input type="text" id="item-6">
     <br><br>
-    <button class="button" onclick="logGroceries()">Submit grocery list</button>
+    <button type="button" class="button" onclick="logGroceries()">Submit grocery list</button>
   </form>
   <script src="js/groceries-script.js"></script>
 </body>
