--- a/groceries.html
+++ b/groceries.html
@@ -9,9 +9,9 @@
   <title>Grocery List</title>
 </head>
 <body>
-  <h1>Create your own grocery list</h1>
+  <h1 style="position:relative; top:45px;">Create your own grocery list</h1>
   <div class="container">
-    <div class="card">
+    <div class="card"style="position:relative; top:50px;">
       <div class="card-body">
         <form id="FormId">
           <p>
