Add sytle effetcs to the card components

--- a/groceries.html
+++ b/groceries.html
@@ -9,8 +9,12 @@
   <title>Grocery List</title>
 </head>
 <body>
-  <h1 style="position:relative; top:45px;">Create your own grocery list</h1>
   <div class="container">
+    <div class=card style="position:relative; top:35px;">
+      <div class="card-heading">
+        <h1>Create your own grocery list</h1>
+      </div>
+    </div>
     <div class="card"style="position:relative; top:50px;">
       <div class="card-body">
         <form id="FormId">
@@ -40,6 +44,6 @@
       </div>
     </div>
   </div>
-  <script src="js/groceries-script.js"></script>
+<script src="js/groceries-script.js"></script>
 </body>
 </html>
